# aws-apigateway-client-lib

./: CMakeLists.txt  NOTICE  README.md
aws-apigateway-client/: CMakeLists.txt  Test.cpp
aws-apigateway-client/include/: GenericApiGatewayClient.h
aws-apigateway-client/include/model/: GenericApiGatewayRequest.h  GenericApiGatewayResponse.h
aws-apigateway-client/source/: GenericApiGatewayClient.cpp
aws-apigateway-client/source/model/: GenericApiGatewayRequest.cpp  GenericApiGatewayResponse.cpp
aws-sdk/: CMakeLists.txt
aws-sdk/cmake/: AwsSdk.cmake
